chore: auth route docs
